--- a/machine_learning.html
+++ b/machine_learning.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
         <link rel=“canonical” href=“https://www.harrysprojects.com/machine_learning.html” />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="js/Navbar.js" type="text/javascript" defer></script>
     </head>
     <body>
