Added contact details.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
                     machine learning topics I've studied, and thoughts and ideas I've had.
                 </p>
                 <h3>Other Blogs you Might Like</h3>
-                <p>I love to read blogs & books on how to think and reason more effectively, how to be a better (software) engineer, to understand
-                people and how they work, how to be more effective, and how to be a good person. This website is starting to become a collection of resources and ideas around those
-                topics. If you landed here because you're interested in these things, than I think you'll really like these other blogs.</p>
+                <p>
+                    I love to read blogs & books on how to think and reason more effectively, how to be a better (software) engineer, to understand
+                    people and how they work, how to be more effective, and how to be a good person. This website is starting to become a collection of resources and ideas around those
+                    topics. If you landed here because you're interested in these things, than I think you'll really like these other blogs.
+                </p>
                 <ul>
                     <li>
                         <p>
@@ -53,6 +55,11 @@
                         </p>
                     </li>
                 </ul>
+                <h3>Contact Me</h3>
+                <p>
+                    You get in touch with me at <b>henry.j.turner@gmail.com</b>. (No it's not a typo).
+                    Alternatively, see <a href="https://www.linkedin.com/in/harry-j-turner/">my LinkedIn</a>.
+                </p>
 
                 <br />
                 <br />
