Added more to seriously active learning.

--- a/blogs/seriouslyactivereading.html
+++ b/blogs/seriouslyactivereading.html
@@ -21,8 +21,93 @@
             <div>
                 <h1>Seriously Active Reading</h1>
                 <p><i></i></p>
+                <h3>Introduction</h3>
                 <p>
-                    Active reading is, vs passive reading.
+                    What is this article all about and why should you read it? Active reading (in contrast with
+                    passive reading) is the process of trying to actively remember what you read by engaging with
+                    the material as you read it. More often than not that means taking notes, pausing regularly to reflect and
+                    connect the ideas with your other experiences, and following up with the information afterwards
+                    using techniques like spaced repetition. The advantage of doing this is obvious, you learn more
+                    and remember more of it!
+                </p>
+                <p>
+                    Unfortunately though, active reading takes a lot of
+                    effort, and you simply can't apply it to everything you read, it'd be too exhausting. But there are
+                    certainly occasions where you do want to really absorb and assimilate the material, and it's
+                    nice to have this "turbo mode" that you can switch on and off as and when you need it.
+                </p>
+                <p>
+                    This article is a tutorial in my system for extracting as much value as possible from the
+                    material, remembering it, and then applying it in my life. I wanted to share it here as I've been
+                    asked about it a few times and it's useful to have somewhere to direct people to.
+                    This system is a variation of other reading systems out there that I have personalised and made
+                    work for me, I hope you find some of the ideas useful. Here's a quick summary of how my
+                    system works, then I'll go through each part in more detail with an example case study.
+                </p>
+                <p>
+                    In short, my system boils down to extracting mental models, principles, and tools. I add these
+                    to three growing lists respectively, and have adopted the habit of regularly reviewing those
+                    lists (which is my version of spaced repetition). That's it.
+                </p>
+                <h3>Mental Models</h3>
+                <p>
+
+                </p>
+                <h3>Principles</h3>
+                <p>
+                    A principle is the term I give to the little rules of thumb that you end up collecting over your
+                    lifetime, the proverbial fatherly wisdom handed down through the generations. They are almost
+                    like rules, but tend to be rather more abstract and general. You can think of them simply as bits
+                    of general purpose advice. The goal of a principle is to
+                    provide guidance in decision making, particularly in deciding how to act and behave in various
+                    situations. It's easier to explain with a few examples.
+                </p>
+                <p>
+                    <code>Prioritise Foundational Skills.</code> This is a principle for helping me decide what to
+                    learn, because there's far too much for learn for one lifetime. This principle reminds me that
+                    programming frameworks and languages come and go but that by mastering the underlying concepts and
+                    ideas beneath those frameworks is more enduring. No doubt you've heard similar advice before,
+                    this is my way of encoding and remembering it.
+                </p>
+                <p>
+                    <code>Affordable Loss Principle.</code> This principle dictates that I find ways to accomplish what
+                    I want to do with the minimal possible expenditure of effort. Taking a product to market? Skip the
+                    market research and analysis, go try and sell the thing instead. I'll learn much more!
+                </p>
+                <p>
+                    <code>If You Don't Ask You Don't Get.</code> I'm sure that I don't need to explain this one,
+                    but it's so true and I've found value in reminding myself of it regularly.
+                </p>
+                <p>
+                    You can find lists and lists of these all over the internet, usually from articles
+                    named things like "50 Lessons for life", or "The Best Advice My Dad Ever Gave Me". Although these are
+                    good places to start, I've found it more effective to build my own list with those that are the
+                    most meaningful to me, it grows over time. The most valuable place I pick up new principles now
+                    is from reading blogs and articles from insightful writers.
+                </p>
+                <p>
+                    You do have to be careful of the level at which you collect them, otherwise you may end up with far
+                    too many. For example, "Wake up at 7am" probably isn't a principle worth keeping in your list,
+                    however perhaps "Keep a consistent sleeping routine" is more appropriate, it depends on what's
+                    important and useful to you.
+                </p>
+                <h3>Tools</h3>
+                <p>
+
+                </p>
+                <h3>Regular Review</h3>
+                <p>
+
+                </p>
+                <h3>A Worked Example</h3>
+                <p>
+
+                </p>
+                <p>
+                    Why mental models, principles and tools? What are they?
+                </p>
+                <p>
+                    -------
                 </p>
                 <p>
                     This is going to be a case study in using mental models, principles, and tools to learn
@@ -41,6 +126,27 @@
                 <p>
                     Lots more here that I haven't figured out. There's a practicing piece, long term memory.
                 </p>
+
+                <br />
+                <div id="disqus_thread"></div>
+                <script>
+                    /**
+                    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+
+                    var disqus_config = function () {
+                    this.page.url = "https://www.harrysprojects.com/blogs/seriouslyactivereading.html";
+                    this.page.identifier = "seriouslyactivereading"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                    };
+
+                    (function() { // DON'T EDIT BELOW THIS LINE
+                    var d = document, s = d.createElement('script');
+                    s.src = 'https://harrysprojects-com.disqus.com/embed.js';
+                    s.setAttribute('data-timestamp', +new Date());
+                    (d.head || d.body).appendChild(s);
+                    })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
                 
                 <br />
