--- a/blogs/seriousactivereading.html
+++ b/blogs/seriousactivereading.html
@@ -9,7 +9,7 @@
         <link href="../styles/styles.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
-        <link rel=“canonical” href=“https://www.harrysprojects.com/blogs/seriouslyactivereading.html” />
+        <link rel=“canonical” href=“https://www.harrysprojects.com/blogs/seriousactivereading.html” />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="../js/Navbar.js" type="text/javascript" defer></script>
     </head>
@@ -130,13 +130,9 @@
                 <br />
                 <div id="disqus_thread"></div>
                 <script>
-                    /**
-                    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-                    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-
                     var disqus_config = function () {
-                    this.page.url = "https://www.harrysprojects.com/blogs/seriouslyactivereading.html";
-                    this.page.identifier = "seriouslyactivereading"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                    this.page.url = "https://www.harrysprojects.com/blogs/seriousactivereading.html";
+                    this.page.identifier = "seriousactivereading";
                     };
 
                     (function() { // DON'T EDIT BELOW THIS LINE
