Fuzzified case study.

--- a/blogs/seriousactivereading.html
+++ b/blogs/seriousactivereading.html
@@ -203,73 +203,66 @@
                 <h3>A Worked Example</h3>
                 <p>
                     To tie everything together, I want to take you through an example of how I used this process
-                    during a short video training course on Critical Thinking that I attended recently at work.
+                    during a short training course on Problem Solving that I attended recently at work.
                     The course was only an hour-long, which is about as much time as I can deeply concentrate for, and
                     trust me, this process requires deep concentration. The course was split into four sections.
                 </p>
                 <ul>
-                    <li><p>What Is Critical Thinking</p></li>
+                    <li><p>What Is Problem Solving</p></li>
                     <li><p>Thinking the Problem Through</p></li>
-                    <li><p>Using Critical Thinking Tools</p></li>
-                    <li><p>Practice Critical Thinking</p></li>
+                    <li><p>Using Problem Solving Tools</p></li>
+                    <li><p>Practice Problem Solving</p></li>
                 </ul>
                 <p>
                     As a side note, the nice thing about structured training courses like this one is that they're usually
                     specifically designed so that each section has one main idea or concept behind it. The course designer
                     may not be consciously thinking about whether or not that idea is a principle or mental model, but
                     it doesn't matter, it makes it easy for me to pick up. The general format for this course was that
-                    each section was broken down into a set of videos. Each video usually made one major point, and
-                    then the rest of the video contained several examples elaborating that point.
+                    each section was broken down into a set of lessons. Each lesson usually made one major point, and
+                    then the rest of the lesson contained several examples elaborating that point.
                 </p>
                 <p>
-                    My method therefore involved paying close attention during the first minute or so of the video to
+                    My method therefore involved paying close attention during the first minute or so of the lesson to
                     pick out the model or principle, and then filling in any additional useful commentary whilst
                     watching that idea be applied in practice.
                 </p>
                 <p>
-                    <b>Disclaimer.</b> I've been very careful not to share too much course material here, I don't want to infringe on
-                    any copyright. My goal here is to show you how I watch such a course and extract valuable ideas from it,
-                    <i>not</i> to teach you critical thinking. I will say that the course is very good and well worth a watch.
+                    <b>Disclaimer.</b> I've been very careful not to share too much course material here, even though
+                    it's not a public course, I don't want to infringe on any copyright. My goal here is to show you
+                    how I watch such a course and extract valuable ideas from it, <i>not</i> to teach you problem solving.
                     All the extracted mental models and principles I think are fair game to share, these are
-                    generic critical thinking concepts. All specific examples I have provided are however my own, I haven't
-                    copied anything concrete from the course. For completeness, you can find it on
-                    <a href="https://www.linkedin.com/learning/critical-thinking">LinkedIn Learning</a>, by
-                    Mike Figliuolo.
+                    generic problem solving concepts. All specific examples I have provided are however my own, I haven't
+                    copied anything concrete from the course itself.
                 </p>
-                <p>
-                    As a final note, to me, the whole course felt more like Problem Solving, instead of Critical Thinking.
-                    In my mind Critical Thinking is something different, it's about analysing arguments and biases in thinking.
-                    But it's irrelevant to the point I'm making in this article and the terms Critical Thinking and
-                    Problem Solving are interchangeable for this example.
-                </p>
-                <h3>What Is Critical Thinking</h3>
+                
+                <h3>What Is Problem Solving</h3>
                 <p>
                     The first section was broken into three parts. I'll go through each in turn.
                 </p>
                 <ul>
-                    <li><p>The Importance of Critical Thinking</p></li>
-                    <li><p>Distinguishing Causes vs Consequences</p></li>
-                    <li><p>Breaking Problems into Smaller Ones</p></li>
+                    <li><p>The Importance of Problem Solving</p></li>
+                    <li><p>Causes vs Consequences</p></li>
+                    <li><p>Breaking Problems Down</p></li>
                 </ul>
                 <p>
-                    <b>The Importance of Critical Thinking.</b> The first video was a sales pitch on why I
+                    <b>The Importance of Problem Solving.</b> The first lesson was a sales pitch on why I
                     should take the rest of the course, it said that rushing off to solve problems without thinking
                     usually leads to solving the wrong problem and wasting time, so it pays to think critically about
                     the problem first. I know all this, it's why I'm doing the course in the first place, so nothing
                     to extract here.
                 </p>
                 <p>
-                    <b>Distinguishing Causes vs Consequences.</b> The second video dived straight into actionable
+                    <b>Causes vs Consequences.</b> The second lesson dived straight into actionable
                     advice, this immediately screamed Principles! The instructor made two points, you must ensure
                     you understand the root cause of the problem, not the superficial one you may be starting with.
                     Secondly, ensure you understand the consequences of taking a particular action. What sequence
                     of events could unfold as a result of you implementing your solution.
-                    These points were explained in the first thirty seconds of the video, and
+                    These points were explained in the first thirty seconds of the lesson, and
                     then the remainder developed the ideas with several examples and more information. Perfect I thought, there are two
                     problem solving principles here. 1. <i>Evaluate the Root Cause</i>, and 2. <i>Consider the Consequences</i>.
                 </p>
                 <p>
-                    <b>Breaking Problems into Smaller Ones.</b> The last video of the section followed the same pattern, the first
+                    <b>Breaking Problems Down</b> The last lesson of the section followed the same pattern, the first
                     thirty seconds just said break the problem down, but then the instructor followed it up
                     with several examples and nuances. At first, that felt like another principle, but when they stepped
                     through the example it felt more like a variation of <i>Evaluate the Root Cause</i>. Splitting
@@ -282,20 +275,20 @@
                     Section 2 was made up of the following parts.
                 </p>
                 <ul>
-                    <li><p>Define the Problem Statement</p></li>
+                    <li><p>Understand the Problem</p></li>
                     <li><p>Ask the Question Behind the Question</p></li>
-                    <li><p>Examine Past Efforts</p></li>
-                    <li><p>Use News Lenses to Think Critically</p></li>
+                    <li><p>Look at What was Done Previously</p></li>
+                    <li><p>Consider Multiple Points of View</p></li>
                 </ul>
                 <p>
-                    <b>Define the Problem Statement</b>. The instructor made one point here, you need to understand
+                    <b>Understand the Problem</b>. The instructor made one point here, you need to understand
                     the problem before you go off and solve it, and the best way to do that is to write a problem statement.
                     A quick google search shows a generic problem statement consists of the goal, boundaries, success criteria, assumptions, stakeholders, and timelines.
                     There was a lot of useful stuff to unpack here. First, I extracted a new principle, 3. <i>Understand
                     the Problem</i>. You could argue this is the same as <i>Evaluate the Root Cause</i>, but it felt
                     different, to me, this one is about making sure you're quantifying what it means to solve your problem, not necessarily
                     identifying the actual cause of the problem. I added a tool as well, the Problem Statement, because the way
-                    it was presented in the video felt like a step by step process. It was a checklist to follow. I created
+                    it was presented in the lesson felt like a step by step process. It was a checklist to follow. I created
                     a tool called the Problem Statement that involves answering the questions.
                 </p>
                 <ul>
@@ -308,7 +301,7 @@
                 </ul>
 
                 <p>
-                    <b>Ask the Question Behind the Question.</b> In this video, the instructor started by describing the tendency
+                    <b>Ask the Question Behind the Question.</b> In this lesson, the instructor started by describing the tendency
                     for us to rush off and start solving a problem the moment a co-worker asks us something. Here's my example,
                     imagine you get asked <i>Can you dig out those reports on our last quarter sales projections for me please?</i>
                     Or something along those lines. How many of us just rush off and do it? Whereas if you ask them
@@ -332,20 +325,20 @@
                     which will hopefully prompt you to ask them more about the underlying reasons for their question.
                 </p>
                 <p>
-                    <b>Examine Past Efforts.</b> In this video, the instructor made the point that you should go and look
+                    <b>Look at What was Done Previously.</b> In this lesson, the instructor made the point that you should go and look
                     at previous projects to see if this has been done before and if so, ask yourself what is
                     different now that wasn't the case back then. This was simply another principle and I captured it
                     as principle number four, <i>Don't Reinvent the Wheel.</i>
                 </p>
                 <p>
-                    <b>Use New Lenses to Think Critically</b>. In this video, the instructor made the point that
+                    <b>Consider Multiple Points of View</b>. In this lesson, the instructor made the point that
                     you should consider the problem from the point of view of different people, such as the sales team,
                     the CEO, the customer, or the engineering team. This will give you a new perspective on the problem.
                     It made sense I thought, and simply captured it as another principle, <i>Consider Different
                     Points of View</i>. I made a few notes as prompts: <i>What if Constraints were removed?</i>
                     <i>What does it look like from sales/ceo/engineering?</i>
                 </p>
-                <h3>Using Critical Thinking Tools</h3>
+                <h3>Using Problem Solving Tools</h3>
                 <p>
                     Section Three had the following sections.
                 </p>
@@ -368,7 +361,7 @@
                     <b>Seven So Whats</b> The Seven So-Whats is identical to the Five Whys except that you ask <i>What
                     happens as a result?</i> This time you do it seven times (presumably because five was already taken)
                     either way you're assessing consequences, not causes. Again, the idea is very
-                    simple so I captured the tool in the first twenty seconds, the remainder of the ten-minute video
+                    simple so I captured the tool in the first twenty seconds, the remainder of the ten-minute lesson
                     was just expounding on the idea with an example. I connected the tool to the <i>Evaluate the
                     Consequences</i> principle and made a note to use the tool to help you.
                 </p>
@@ -380,10 +373,10 @@
                     think in terms of cause and effect (that's basically what debugging is). As I watched the instructor
                     work through his examples of Five Whys and Seven So Whats, I watched him drill right down into a
                     very specific issue. Let me show you what happened (swapping in a different example).
-                    The original issue was that the stock price was plummeting. These are the five answers that came next.
+                    The original issue was that the profit is declining. These are the five answers that came next.
                 </p>
                 <ul>
-                    <li><p>Problem. Our stock price is going down.</p></li>
+                    <li><p>Problem. Our profit is going down.</p></li>
                     <li><p>Why? Because our product sales are declining.</p></li>
                     <li><p>Why? Because the product lacks critical features.</p></li>
                     <li><p>Why? Because the development team didn't have time to implement them.</p></li>
@@ -394,8 +387,8 @@
                 <p>
                     <i>Hang on??</i> I thought to myself. Things are never that simple. Are you absolutely sure
                     that the answers to each of those <i>why</i> questions is the one and only cause? There are probably lots
-                    of reasons for a plummeting stock price. Something didn't feel right. At that point, the mental
-                    models of graph theory and breadth vs depth-first search popped into my head. (These are topics from
+                    of reasons for plummeting profits. Something didn't feel right. At that point, the mental
+                    models of graph theory and breadth vs depth-first search popped into my head. (These are lessons from
                     computer science).
                 </p>
                 <p>
@@ -431,10 +424,10 @@
                     but it's just a power law, and it doesn't even have to add up to 100%. You can have 90% of your
                     problems coming from 1% of the customers etc. I already had this captured in my lists, it's a widely
                     known mental model that says cause and effect are usually disproportionately distributed. Something
-                    always worth keeping in mind. The video itself introduced the rule and then showed a few examples,
+                    always worth keeping in mind. The lesson itself introduced the rule and then showed a few examples,
                     I brushed over this one as I was already familiar with the concept.
                 </p>
-                <h3>Practice Critical Thinking</h3>
+                <h3>Practice Problem Solving</h3>
                 <p>
                     I'll admit, I was getting tired at this point,
                     the course had been going for almost an hour. I expected this section to be a wrap up of everything discussed
@@ -444,7 +437,7 @@
                 </p>
                 <h3>The Result</h3>
                 <p>
-                    Let's conclude. From a one-hour course on Critical Thinking I extracted the following.
+                    Let's conclude. From a one-hour course on Problem Solving I extracted the following.
                 </p>
                 <ul>
                     <li>
