--- a/blogs/seriousactivereading.html
+++ b/blogs/seriousactivereading.html
@@ -208,9 +208,9 @@
                     trust me, this process requires deep concentration. The course was split into four sections.
                 </p>
                 <ul>
-                    <li><p>What Is Problem Solving</p></li>
-                    <li><p>Thinking the Problem Through</p></li>
-                    <li><p>Using Problem Solving Tools</p></li>
+                    <li><p>Introduction to Problem Solving</p></li>
+                    <li><p>Working Through the Problem</p></li>
+                    <li><p>Problem Solving Tools</p></li>
                     <li><p>Practice Problem Solving</p></li>
                 </ul>
                 <p>
@@ -218,8 +218,9 @@
                     specifically designed so that each section has one main idea or concept behind it. The course designer
                     may not be consciously thinking about whether or not that idea is a principle or mental model, but
                     it doesn't matter, it makes it easy for me to pick up. The general format for this course was that
-                    each section was broken down into a set of lessons. Each lesson usually made one major point, and
-                    then the rest of the lesson contained several examples elaborating that point.
+                    each section was broken down into a set of short lessons, each a couple of minutes long.
+                    Each lesson usually made one major point, and then the rest of the lesson contained several
+                    examples elaborating that point.
                 </p>
                 <p>
                     My method therefore involved paying close attention during the first minute or so of the lesson to
@@ -235,7 +236,7 @@
                     copied anything concrete from the course itself.
                 </p>
                 
-                <h3>What Is Problem Solving</h3>
+                <h3>Introduction to Problem Solving</h3>
                 <p>
                     The first section was broken into three parts. I'll go through each in turn.
                 </p>
@@ -264,13 +265,13 @@
                 <p>
                     <b>Breaking Problems Down</b> The last lesson of the section followed the same pattern, the first
                     thirty seconds just said break the problem down, but then the instructor followed it up
-                    with several examples and nuances. At first, that felt like another principle, but when they stepped
+                    with several examples. At first, it felt like another principle, but when they stepped
                     through the example it felt more like a variation of <i>Evaluate the Root Cause</i>. Splitting
                     your big problem in two was reflecting the fact that the problem was influenced by these two
                     smaller causes. So I didn't add a new principle, I expanded the definition of <i>Evaluate the
                     Root Cause</i> to include breaking the problem down into pieces.
                 </p>
-                <h3>Thinking the Problem Through</h3>
+                <h3>Working Through the Problem</h3>
                 <p>
                     Section 2 was made up of the following parts.
                 </p>
@@ -338,7 +339,7 @@
                     Points of View</i>. I made a few notes as prompts: <i>What if Constraints were removed?</i>
                     <i>What does it look like from sales/ceo/engineering?</i>
                 </p>
-                <h3>Using Problem Solving Tools</h3>
+                <h3>Problem Solving Tools</h3>
                 <p>
                     Section Three had the following sections.
                 </p>
