Final edit of seriousactivereading, ready for review.

--- a/blogs/seriousactivereading.html
+++ b/blogs/seriousactivereading.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Harry's Projects</title>
+        <title>Seriously Active Reading</title>
         <meta name="description" content="">
         <link rel="icon" type="image/ico" href="../images/favicon.ico">
         <link href="../styles/styles.css" type="text/css" rel="stylesheet" />
@@ -134,7 +134,7 @@
                     working hard to make everything perfect and putting all the pieces in place before you "go live", is
                     likely not as effective as simply going for it and adapting as you go. Note that this works well
                     for entrepreneurs, probably less well for something like aircraft design, but there is a skill in
-                    knowing when to apply which principles. Also, note that I call it the Affordable Loss Principles
+                    knowing when to apply which principles. Also, note that I call it the Affordable Loss Principle
                     because that's how it's known in the literature, the principle itself says to find ways to accomplish what
                     you want to do with the minimal possible expenditure of effort, which is a directive, so it does
                     feel like a principle rather than a mental model under my definitions.
@@ -173,7 +173,7 @@
                     goes like this. During the meeting, don't take notes, pay absolute attention to what your partner
                     is saying. Afterward, when you get home, start writing notes. Begin with a flow of consciousness
                     and use environmental clues to jog your memory. When that dries up, start mind-mapping, that usually
-                    helps you remember a few more pieces. Next, draw a picture of the other person (seriously), then
+                    helps you remember a few more pieces. Next, draw a picture of the other person (seriously), the
                     switch to a different medium and way of thinking jogs yet more memories. Next add a time-line of
                     the conversation, that usually dislodges yet a few more, finally write it all up. I'll admit that I don't
                     do this yet, it's a lot of effort, but I know it's there and I've captured it in my list of
@@ -185,7 +185,7 @@
                     time and again that if you want to remember it for good, then that's what you need to do. I
                     believe that the mental models, principles, and tools I'm collecting are really valuable, and if I end
                     up in one of those situations where they may be useful, I want them to come to mind quickly and
-                    automatically, I don't want to have to say, "hang on a minute" and get my phone out and start
+                    automatically, I don't want to have to say, <i>hang on a minute</i> and get my phone out and start
                     scrolling through the list to find the most relevant one.
                 </p>
                 <p>
@@ -194,7 +194,7 @@
                     as well be these lists.
                     So that's what I do, the only repetition I do is to go over those lists, I spend a least a little
                     bit of time each day just reading those lists. Specifically, I glance at the name of the model
-                    or principle and then try and explain it to myself with an example, then check, and I try and use
+                    or principle and then try and explain it to myself with an example, then check if I'm correct, and I try and use
                     different examples each time. It surprised me how quickly they become internalised and I've
                     started noticing in my conversations with people that the right ones are starting to pop up, and I'll
                     say, <i>ah yes, that's like this idea</i>, or <i>oh that's like this thing, we can think of this
@@ -215,8 +215,8 @@
                 </ul>
                 <p>
                     As a side note, the nice thing about structured training courses like this one is that they're usually
-                    specifically designed so that each section has one main idea or concept behind it. The course designer
-                    may not be consciously thinking about whether or not that idea is a principle or mental model, but
+                    designed so that each section has one main idea or concept behind it. The course designer
+                    may not be consciously thinking about whether or not that idea is a principle or mental model or tool, but
                     it doesn't matter, it makes it easy for me to pick up. The general format for this course was that
                     each section was broken down into a set of short lessons, each a couple of minutes long.
                     Each lesson usually made one major point, and then the rest of the lesson contained several
@@ -232,7 +232,7 @@
                     it's not a public course, I don't want to infringe on any copyright. My goal here is to show you
                     how I watch such a course and extract valuable ideas from it, <i>not</i> to teach you problem solving.
                     All the extracted mental models and principles I think are fair game to share, these are
-                    generic problem solving concepts. All specific examples I have provided are however my own, I haven't
+                    generic problem solving concepts. All specific examples I have provided are however my own and for illustration, I haven't
                     copied anything concrete from the course itself.
                 </p>
                 
@@ -269,7 +269,7 @@
                     through the example it felt more like a variation of <i>Evaluate the Root Cause</i>. Splitting
                     your big problem in two was reflecting the fact that the problem was influenced by these two
                     smaller causes. So I didn't add a new principle, I expanded the definition of <i>Evaluate the
-                    Root Cause</i> to include breaking the problem down into pieces.
+                    Root Cause</i> to include the need for breaking the problem down into pieces.
                 </p>
                 <h3>Working Through the Problem</h3>
                 <p>
@@ -321,7 +321,8 @@
                     and it goes like this. It's the idea that when someone asks you something, there's all this stuff
                     in their head that they haven't asked you, which is their actual problem, but they're asking you
                     what <i>they think</i> will get them the solution (this is a variation of information compression).
-                    If you keep that model in mind next time someone asks you to help them solve a problem, then you
+                    Can you see how this is a mental model? It's a simplifying assumption about how this particular piece of
+                    the world works, if you keep that model in mind next time someone asks you to help them solve a problem, then you
                     will almost feel the nagging doubt that there's something else to this that they're not saying
                     which will hopefully prompt you to ask them more about the underlying reasons for their question.
                 </p>
@@ -359,12 +360,12 @@
                     <i>Why</i> until you've got to the root cause.
                 </p>
                 <p>
-                    <b>Seven So Whats</b> The Seven So-Whats is identical to the Five Whys except that you ask <i>What
+                    <b>Seven So Whats</b> The Seven So Whats is identical to the Five Whys except that you ask <i>What
                     happens as a result?</i> This time you do it seven times (presumably because five was already taken)
                     either way you're assessing consequences, not causes. Again, the idea is very
                     simple so I captured the tool in the first twenty seconds, the remainder of the ten-minute lesson
                     was just expounding on the idea with an example. I connected the tool to the <i>Evaluate the
-                    Consequences</i> principle and made a note to use the tool to help you.
+                    Consequences</i> principle and made a note to use the tool to help.
                 </p>
                 <p>
                     <b>Then something interesting happened.</b>
@@ -389,8 +390,8 @@
                     <i>Hang on??</i> I thought to myself. Things are never that simple. Are you absolutely sure
                     that the answers to each of those <i>why</i> questions is the one and only cause? There are probably lots
                     of reasons for plummeting profits. Something didn't feel right. At that point, the mental
-                    models of graph theory and breadth vs depth-first search popped into my head. (These are lessons from
-                    computer science).
+                    models of graph theory and breadth vs depth-first search popped into my head. (These are mental models from
+                    the field of computer science).
                 </p>
                 <p>
                     I realised that when you start at the problem and ask <i>why</i> for the first time, there are
@@ -401,7 +402,7 @@
                     you have possibly hundreds of different root causes. How can we be so sure we've got the right one?
                     Once I realised this, I knew Five Whys could be dangerous if not used properly, because the reality
                     is that there is a tangled web of cause and effect leading to your original problem, and Five Whys
-                    is a depth-first search down one path of the tree.
+                    is a depth-first search down one path of the tree (as is Seven So Whats).
                 </p>
                 <div class="image-container">
                     <img src="../images/blogs/seriousactivereading/simple.png"/>
